--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "@babel/node": "^7.10.1",
     "nodemon": "^2.0.4"  
   },
   "devDependencies": {
