--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "@babel/node": "^7.10.1",
-    "nodemon": "^2.0.4"  
+    "nodemon": "^2.0.4",
+    "@babel/core": "^7.10.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
