--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "@babel/node": "^7.10.1",
     "nodemon": "^2.0.4",
-    "@babel/core": "^7.10.2"
+    "@babel/core": "^7.10.2",
+    "@babel/cli": "^7.10.1",
+    "@babel/node": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/register": "^7.10.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
