--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/node": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
-    "@babel/register": "^7.10.1"
+    "@babel/register": "^7.10.1",    
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
